# buildid

./: CHANGELOG.md  Cargo.toml  README.md  bors.toml  flake.nix
.circleci/: config.yml
.github/workflows/: ci.yml  nix.yml
buildid-linker-symbols/: CHANGELOG.md  Cargo.toml  build.rs  buildid-linker-symbols.lds
buildid-linker-symbols/tests/: simple.rs
buildid-tests-linker-symbols/: Cargo.toml
examples/: simple.rs
scripts/: build-id-start-end.lds  test-gnu-ld  test-gnu-ld-section-inject  test-gnu-ld-symbol-start-end  test-gnu-ld-symbol-start-end-no-lds
src/: align.rs  constparse.rs  custom-inject.rs  elf.rs  lib.rs  mach.rs  section-inject.rs  symbol-start-end.rs  windows.rs
tests/: simple.rs
