[package]
name = "buildid"
version = "1.0.0"
edition = "2021"
keywords = ["no_std", "build-id"]
license = "GPL-2.0-or-later OR CDDL-1.0"
description = "Examine the currently running executable to get its build-id or LC_UUID"
repository = "https://github.com/jmesmon/buildid"
documentation = "https://docs.rs/buildid"
readme = "README.md"
categories = ["no-std", "os"]
include = ["**/*.rs", "README.md"]


# TODO: restrict crate content with include/exclude
# TODO: include readme for crates.io page

[features]
buildid-symbol-start-end = []
buildid-section-inject = ["konst"]
buildid-custom-inject = ["cty"]

[dependencies]
buildid-linker-symbols = { version = "1.0", optional = true, path = 'buildid-linker-symbols' }
log = { version = "0.4", default-features = false }
cty = { version = "0.2", optional = true }
konst = { version = "0.2", features = ["parsing_no_proc"], optional = true }

[target.'cfg(all(unix, not(target_vendor = "apple")))'.dependencies]
libc = { version = "0.2" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "winnt", "dbghelp"] }

[dev-dependencies]
env_logger = "0.9"
hex = "0.4"
tracing = { version = "0.1", features = ["log"] }

[workspace]
members = [
	'buildid-tests-linker-symbols'
]
