[package]
name = "buildid"
version = "1.0.2"
edition = "2021"
keywords = ["no_std", "build-id"]
license = "MPL-2.0"
description = "Examine the currently running executable to get its build-id or LC_UUID"
repository = "https://github.com/jmesmon/buildid"
documentation = "https://docs.rs/buildid"
readme = "README.md"
categories = ["no-std", "os"]
include = ["**/*.rs", "README.md"]


# TODO: restrict crate content with include/exclude
# TODO: include readme for crates.io page

[features]
buildid-symbol-start-end = []
buildid-section-inject = ["konst"]
buildid-custom-inject = []

[dependencies]
buildid-linker-symbols = { version = "1.0", optional = true, path = 'buildid-linker-symbols' }
log = { version = "0.4", default-features = false }
konst = { version = "0.2", features = ["parsing_no_proc"], optional = true }

# NOTE: we only need libc if we don't enable one of the overriding features
[target.'cfg(all(unix, not(target_vendor = "apple")))'.dependencies]
libc = { version = "0.2" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "winnt", "dbghelp"] }

[dev-dependencies]
env_logger = "0.9"
hex = "0.4"
tracing = { version = "0.1", features = ["log"] }

[workspace]
members = [
	'buildid-tests-linker-symbols'
]
