[package]
name = "buildid-linker-symbols"
version = "1.0.0"
edition = "2021"

keywords = ["no_std", "build-id"]
license = "GPL-2.0-or-later OR CDDL-1.0"
description = "Configure the linker to support buildid crate's \"buildid-symbol-start-end\" feature"
include = ["**.rs"]

[dependencies]

[dev-dependencies]
buildid = { version = "*", path = "..", features = ["buildid-symbol-start-end"] }
hex = "*"
env_logger = "*"
