[package]
name = "buildid-linker-symbols"
version = "1.0.1"
edition = "2021"
keywords = ["no_std", "build-id"]
license = "MPL-2.0"
description = "Configure the linker to support buildid crate's \"buildid-symbol-start-end\" feature"
include = ["**.rs"]
repository = "https://github.com/jmesmon/buildid"
documentation = "https://docs.rs/buildid"
categories = ["no-std", "os", "development-tools::build-utils"]

[dependencies]
