[package]
name = "buildid-tests-linker-symbols"
version = "0.1.0"
description = "Seperate test crate for buildid-linker-symbols to avoid recursive deps"
edition = "2021"

[dependencies]

[dev-dependencies]
buildid = { version = "*", path = "..", features = ["buildid-symbol-start-end"] }
# NOTE: we avoid using the feature on buildid to pull this in so that workspace builds work
buildid-linker-symbols = { version = "*", path = "../buildid-linker-symbols" }
hex = "*"
env_logger = "*"
